manifest files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: spring_boot_app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
